backend/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
  - port: 5000
    targetPort: 5000
  type: LoadBalancer
